--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "back",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "bun --inspect run index.js"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/express": "^4.17.21",
@@ -11,6 +15,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@prisma/client": "^5.9.1",
     "express": "^4.18.2"
   }
 }
